<resources>
    <string name="app_name">MeetApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_event_create">Create Event</string>
    <string name="title_activity_groups">Groups</string>

    <string name="Username">Username</string>
    <string name="Nome">Name</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Mail">Mail</string>
    <string name="Password2">Repeat the Password</string>
    <string name="Terms">Accept Terms and Conditions</string>

    <!--Create event-->
    <string name="event_name">Name</string>
    <string name="event_location">Location</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_category">Category</string>
    <string name="event_description">Description</string>
    <string name="event_photo">Upload photo</string>
    <string name="event_add">Add event</string>
    <string name="title_activity_event">Event</string>
    <string name="event_cancel">Cancel Event</string>
    <string name="event_go">I will go</string>
    <string name="long_press_map">Pick one</string>


    <!-- filter dialog-->
    <string name="filter_message">Filter events:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="filter_option_1">All events</string>
    <string name="filter_option_2">Your events</string>
    <string name="filter_option_3">Friends\' events</string>


    <string-array name="filter_options">
        <item>@string/filter_option_1</item>
        <item>@string/filter_option_2</item>
        <item>@string/filter_option_3</item>
    </string-array>
    <string name="title_activity_favorite_create">Create Favorite</string>

    <!--Create favorite-->
    <string name="favorite_name">Name</string>
    <string name="favorite_location">Location</string>
    <string name="favorite_description">Description</string>
    <string name="favorite_photo">Upload photo</string>
    <string name="favorite_add">Add Favorite</string>
    <string name="title_activity_favorite">Favorite</string>


</resources>
