<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools = "http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height = "match_parent"
android:paddingLeft= "@dimen/activity_horizontal_margin"
android:paddingRight = "@dimen/activity_horizontal_margin"
android:paddingTop = "@dimen/activity_vertical_margin"
android:paddingBottom = "@dimen/activity_vertical_margin" app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.dagna.meetapp.Register"
tools:showIn="@layout/activity_register"
    android:orientation="vertical">

<ImageView
    android:id="@+id/imageView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/logo"
    android:layout_gravity="center"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"/>

<EditText
    android:id="@+id/editText1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:hint="@string/Nome"
    android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
    android:textColorHint="#afadaf"
    android:textColorLink="@android:color/black" />

<EditText
    android:id="@+id/editText2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/Mail"
    android:inputType="textEmailAddress"
    android:textColorHint="#afadaf"
    android:textColorLink="@android:color/black" />

<EditText
    android:id="@+id/editText3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/Password"
    android:inputType="textPassword"
    android:textColorHint="#afadaf"
    android:textColorLink="@android:color/black" />

<EditText
    android:id="@+id/editText4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/Password2"
    android:inputType="textPassword"
    android:textColorHint="#afadaf"
    android:textColorLink="@android:color/black" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terms"
        android:textSize="18sp"
        android:textColorLink="@color/colorText"
        android:layout_marginTop="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:id="@+id/button2"
        android:onClick="register"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"/>


</LinearLayout>

