<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.dagna.meetapp.FavoriteCreate"
tools:showIn="@layout/activity_favorite_create"
android:orientation="vertical">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="200"
    android:background="@color/colorAccent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favorite_photo"
        android:scaleType="centerCrop"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/favorite_photo"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/transparent_button"
        android:textColor="@color/colorText"
        android:onClick="addPhoto"
        >
    </Button>
</FrameLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_weight="1">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favorite_name"
        android:hint="@string/favorite_name"
        android:gravity="center"
        android:layout_marginBottom  = "@dimen/activity_vertical_margin"

        android:textSize="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom  = "@dimen/activity_vertical_margin"
        >
        <ImageView
            android:paddingRight = "@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mode_edit_black_24dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/favorite_description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:minLines="1"
            android:gravity="top|left"
            android:maxLines="20"
            android:scrollbars="vertical"
            android:hint="@string/favorite_description"
            android:textSize="20dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_add"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:onClick="createFavorite"/>
</LinearLayout>
</LinearLayout>
