<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dagna.meetapp.EventCreate"
    tools:showIn="@layout/activity_eventcreate"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="200"
        android:background="@color/colorAccent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_photo"
            android:scaleType="centerCrop"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/event_photo"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/transparent_button"
            android:textColor="@color/colorText"
            android:onClick="addPhoto"
            >
        </Button>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft= "@dimen/activity_horizontal_margin"
        android:paddingRight = "@dimen/activity_horizontal_margin"
        android:paddingTop = "@dimen/activity_vertical_margin"
        android:paddingBottom = "@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_name"
            android:hint="@string/event_name"
            android:gravity="center"
            android:layout_marginBottom  = "@dimen/activity_vertical_margin"

            android:textSize="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:paddingRight = "@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_access_time_black_24dp"/>
            <EditText
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/event_date"
                android:layout_weight="1"
                android:textSize="20dp"
                android:onClick="pickDate"
                android:focusable="false"/>

            <EditText
                android:id="@+id/event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/event_time"
                android:layout_weight="1"
                android:textSize="20dp"
                android:onClick="pickTime"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:paddingRight = "@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_list_black_24dp"/>

            <Spinner
                android:id="@+id/event_category"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_mode_edit_black_24dp" />

            <EditText
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/event_description"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="20"
                android:minLines="1"
                android:scrollbars="vertical"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_people_black_24dp" />

            <Spinner
                android:id="@+id/event_privacy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_add"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorText"
            android:onClick="createEvent"/>
    </LinearLayout>
</LinearLayout>
