<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context="com.example.dagna.meetapp.Login"
    android:orientation="vertical" tools:showIn="@layout/activity_login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:focusable="true"
        android:hint="@string/Username"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="#afadaf"
        android:textColorLink="@android:color/black" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="#afadaf"
        android:textColorLink="@android:color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/button_login"
        android:onClick="login"
        android:textColor="@color/colorText"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login with Facebook"
        android:id="@+id/button_login_facebook"
        android:onClick="login"
        android:textColor="@color/colorText"
        android:background="@color/colorPrimaryDark"
        />


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="or"
            android:textColor="@color/colorText"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/or"
            android:background="@color/colorText"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/or"
            android:background="@color/colorText"
            />

    </RelativeLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:id="@+id/button2"
        android:onClick="register"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"/>


</LinearLayout>
