<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dagna.meetapp.Event"
    tools:showIn="@layout/activity_event"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/colorAccent"
        />
    <TabHost
        android:id="@+id/groups_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft= "@dimen/activity_horizontal_margin"
                    android:paddingRight = "@dimen/activity_horizontal_margin"
                    android:paddingTop = "@dimen/activity_vertical_margin"
                    android:paddingBottom = "@dimen/activity_vertical_margin"
                    android:orientation="vertical"
                    android:layout_weight="3"
                    android:id="@+id/tab1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_name"
                        android:textSize="24dp"
                        android:textAlignment="center"
                        android:hint="@string/event_name"
                        android:layout_marginBottom  = "@dimen/activity_vertical_margin2"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom = "@dimen/activity_vertical_margin"
                        >
                        <ImageView
                            android:paddingRight = "@dimen/activity_horizontal_margin"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_access_time_black_24dp"/>
                        <TextView
                            android:id="@+id/event_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_date"
                            android:layout_weight="1"
                            android:textSize="20dp"/>

                        <TextView
                            android:id="@+id/event_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_time"
                            android:layout_weight="1"
                            android:textSize="20dp"/>
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:layout_marginBottom  = "@dimen/activity_vertical_margin"
                    >
                    <ImageView
                        android:paddingRight = "@dimen/activity_horizontal_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_list_black_24dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/event_category"
                        android:hint="@string/event_category"
                        android:textSize="20dp"
                        android:paddingBottom = "@dimen/activity_vertical_margin"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom  = "@dimen/activity_vertical_margin"
                    >
                    <ImageView
                        android:paddingRight = "@dimen/activity_horizontal_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_mode_edit_black_24dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_description"
                        android:lines="4"
                        android:minLines="1"
                        android:maxLines="20"
                        android:scrollbars="vertical"
                        android:hint="@string/event_description"
                        android:textSize="20dp"
                        android:paddingBottom = "@dimen/activity_vertical_margin"
                        />
                </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="friends' groups "
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
